src/objects/Employee_Directory_Configuration__c.object
<CustomObject>
    <description>The Account whose contacts will be used for Employee Directory</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contacts from this account will be used for Employee Directory(test)</description>
        <inlineHelpText>Contacts from this account will be used for Employee Directory</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Employee Directory Configurations</relationshipLabel>
        <relationshipName>R00N80000002bfDeEAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>diz_date__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_date__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>diz_location__c</fullName>
        <label>diz_location__c</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <label>Employee Directory Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Configuration</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Directory Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>